stylesheets/_deprecated.styles.scss
/* ... */
.richer-list__item-placeholder {
  background-color: color(gray, off-white);
  height: ($line-height-base * 1.8) * 3;
  text-align: center;
  vertical-align: inherit;

  a {
    color: color(link);
  }

  &:hover a {
    text-decoration: underline;
  }
}


/* -------------------------------------------------------------------------- *\
    Variations
\* -------------------------------------------------------------------------- */

.richer-list--fit-items { /* [14] */
  &,
  .richer-list__items-container,
  .richer-list__detail {
    height: auto;
  }

  .richer-list__items {
    margin-bottom: 0; /* [15] */
  }
}


.richer-list--paginated {
  @extend .richer-list--fit-items;
  height: $rich-list-height-paginated; /* [2] */
  margin-bottom: 1px; /* [16] */

  .richer-list__detail {
    height: 100%;
    overflow-y: scroll;
  }
}


@include respond-min($screen-tablet) { /* [17] */
  .richer-list {
    .richer-list__items-container {
      width: percentage($rich-list-items-width-small);
    }

    .richer-list__detail {
      width: percentage(1 - $rich-list-items-width-small);
    }
  }


  .richer-list--medium {
    .richer-list__items-container {
      width: percentage($rich-list-items-width-medium);
    }

    .richer-list__detail {
      width: percentage(1 - $rich-list-items-width-medium);
    }
  }


  .richer-list--large {
    .richer-list__items-container {
      width: percentage($rich-list-items-width-large);
    }

    .richer-list__detail {
      width: percentage(1 - $rich-list-items-width-large);
    }
  }


  .richer-list--xlarge {
    .richer-list__items-container {
      width: percentage($rich-list-items-width-xlarge);
    }

    .richer-list__detail {
      width: percentage(1 - $rich-list-items-width-xlarge);
    }
  }
}


.richer-list--tall,
.richer-list--tall .richer-list__items-container {
  height: $rich-list-height-tall;
}


/* -------------------------------------------------------------------------- *\
    Alternative Uses
\* -------------------------------------------------------------------------- */

.deck { /* [18] */
  .richer-list__items,
  .richer-list__detail {
    height: 100%;
    overflow-y: visible;
  }
}


/* -------------------------------------------------------------------------- *\
    Settings
\* -------------------------------------------------------------------------- */

.richer-list__with-settings {

  .richer-list__detail {
    padding-right: 55px;
    position: relative;
  }

  .settings {
    height: 100%;
    position: absolute;
    right: -200px;
    top: 0;

    -webkit-transition: all .5s ease-in-out;
    -moz-transition: all .5s ease-in-out;
    -ms-transition: all .5s ease-in-out;
    -o-transition: all .5s ease-in-out;
    transition: all .5s ease-in-out;

    &.open {
      box-shadow: -5px 0 0 rgba(0, 0, 0, .1);
      right: 0;
    }
  }
}


// -----------------------------------------------------------------------------
//  18/01/2018
//
// removes bottom margin from an element, replaced with u- namespaced class
//
//  _utility.utilities.scss
// -----------------------------------------------------------------------------

.bottomless {
    margin-bottom: 0 !important;
}


// -----------------------------------------------------------------------------
//  30/03/20
//
// Form input guidance removed from:;
//
//  _component.input-groups.scss
//  _layout.settings.scss
//  _utility.sortable.scss
//
// -----------------------------------------------------------------------------

.input-group-guidance {
    background-color: color(white);
    border: 0;
    color: color(jadu-blue);
    font-size: $font-size-base;
    font-weight: normal;
    line-height: 24px;
    padding: 0 $padding-base-horizontal;
    text-align: center;
    vertical-align: baseline;

    &:hover {
        color: color(jadu-blue, dark);
    }

    // Nuke default margins from checkboxes and radios to vertically center within.
    input[type="radio"],
    input[type="checkbox"] {
        margin-top: 0;
    }
}

.tab__settings .input-group-guidance {
    background-color: color(background);
}

div.is-sortable .input-group-guidance {
    background-color: transparent;
}

